# bucktrix

./: .gitignore  README.md  main.py  makefile  pyproject.toml
bucktrix/: __main__.py  callback.py  config.py  conn.py  task.py
bucky/: callback.py  config.py
examples/: bucktrix.service  bucky.service  send.sh
scripts/: proxmox_backup_notif.sh  smartctl_notif.sh
testing/: podman  synapse admin
